@@ -1,3 +1,8 @@
+2012-12-04 Murilo Pinoti Belluzzo (mbelluzzo)
+
+	* Add elm_app_name_set/get(): Formal application name string.
+	* Add elm_app_destkop_entry_set/get(): Path to '.desktop' file.
+
 2012-12-03 Gustavo Sverzut Barbieri (k-s)
 
 	* Add elm_need_edbus(), deprecate elm_need_e_dbus(), integrating
